Fixed problems with nullpointers, required some major reverts so will need to re-fix some PMD, although this is a minor issue so may not be done.