@@ -21,12 +21,18 @@ package dmxeffects.dmx;
 
 import com.trolltech.qt.core.QObject;
 
-public class DMXInput extends QObject implements Runnable { // NOPMD by chris on
-															// 07/06/07 00:21
+public class DMXInput extends QObject implements Runnable {
 
-	public transient Signal2<Integer, Integer> inputValue = new Signal2<Integer, Integer>();
+	public Signal2<Integer, Integer> inputValue = new Signal2<Integer, Integer>();
 
-	public transient Signal0 listenerStarted = new Signal0();
+	public Signal0 listenerStarted = new Signal0();
+
+	/**
+	 * Creates a new instance of DMXInput
+	 * 
+	 */
+	public DMXInput() {
+	}
 
 	/**
 	 * Method invoked when this method is run by a QThread
@@ -47,17 +53,18 @@ public class DMXInput extends QObject implements Runnable { // NOPMD by chris on
 			 * polling for data, due to the specification of the protocol.
 			 */
 			Integer dataPeek = InputQueue.getInstance().peek();
-			while (Integer.valueOf(-1).equals(dataPeek)) {
+			while (dataPeek == null) {
 				try {
 					Thread.sleep((long) 0, 88000);
 				} catch (java.lang.InterruptedException e) {
+					System.err.println("Thread interruption detected");
 					e.printStackTrace(System.err);
 				}
 				dataPeek = InputQueue.getInstance().peek();
 			}
 			for (int i = 1; i < 513; i++) {
 				dataPeek = InputQueue.getInstance().peek();
-				while (Integer.valueOf(-1).equals(dataPeek)) {
+				while (dataPeek == null) {
 					/*
 					 * It appears that the break in the data was longer than
 					 * anticipated. The protocol indicates that this break could
@@ -67,13 +74,14 @@ public class DMXInput extends QObject implements Runnable { // NOPMD by chris on
 					try {
 						Thread.sleep((long) 0, 10000);
 					} catch (java.lang.InterruptedException e) {
+						System.err.println("Thread interruption detected");
 						e.printStackTrace(System.err);
 					}
 					dataPeek = InputQueue.getInstance().peek();
 				}
 				// Send a signal indicating the new value
-				inputValue.emit(Integer.valueOf(i), InputQueue.getInstance()
-						.poll());
+				inputValue
+						.emit(new Integer(i), InputQueue.getInstance().poll());
 			}
 		}
 	}
